:sparkles: feat: Post Alert
Post alert functionality.

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,10 @@
       "./tsconfig.json"
     ]
   },
-  "extends": "airbnb-typescript/base",
+  "extends": [
+    "airbnb-typescript/base",
+    "prettier"
+  ],
   "plugins": [
     "import",
     "@typescript-eslint"
