--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,3 @@
 NODE_ENV=development
+MONGO_URI="mongodb+srv://user:password@sample.mongodb.net"
+REDIS_URI="redis://user:password@sample.redis.net"
