--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "typecheck": "tsc --noEmit"
   },
   "keywords": [],
-  "author": "CJ R. <cj@null.computer> (https://w3cj.now.sh)",
+  "author": "Samuel Mutemi",
   "repository": {
     "type": "git",
-    "url": "https://github.com/w3cj/express-api-starter.git"
+    "url": "https://github.com/mtsammy40/crypto_alerts_api"
   },
   "license": "MIT",
   "dependencies": {
+    "ajv": "^8.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "mongodb": "^6.6.2",
+    "morgan": "^1.10.0",
+    "redis": "^4.6.14",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -32,11 +36,14 @@
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.6",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^6.0.2",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
