:sparkles: feat: Implement email notification

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
 NODE_ENV=development
 MONGO_URI="mongodb+srv://user:password@sample.mongodb.net"
 REDIS_URI="redis://user:password@sample.redis.net"
+NOVU_API_KEY="sample_key"
+NOVU_APP_ID="sample_id"
+NOVU_ENVIRONMENT_ID="sample_env_id"
