--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@novu/node": "^0.24.2",
     "ajv": "^8.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
