--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "express-api-starter-ts",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": " A basic starter for an express.js API with Typescript",
   "main": "src/index.ts",
   "scripts": {
+    "pm2:prod": "pm2 start processes.json --watch -i max --no-daemon",
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
+    "build:image": "rm -rf ./dist/ && tsc && docker build -t mtsammy40/crypto_alerts_api:latest -t mtsammy40/crypto_alerts_api:$npm_package_version .",
     "start:dist": "node dist/src/index.js",
     "lint": "eslint --fix src test",
     "test": "jest",
@@ -28,6 +30,7 @@
     "helmet": "^7.1.0",
     "mongodb": "^6.6.2",
     "morgan": "^1.10.0",
+    "pm2": "^5.4.0",
     "redis": "^4.6.14",
     "ws": "^8.17.0"
   },
